great-idea-website/css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {

	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Titillium Web', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-family: 'Bangers', cursive;
    letter-spacing: 1px;
    margin-bottom: 15px;
}

/* Your code starts here! */
/**/

/*Navigation section*/
nav {
	margin: 0 auto;
	display: flex;
	flex-wrap: wrap;
}
.top {
	margin: 3% auto;
	text-decoration: none;
	justify-content: space-around;
	align-items: center;
}

img.logo {
	padding: 14px;
	justify-content: space-around;
    align-items: center;
}
/*End of Navigation section*/
/*Header section begins*/
#header {
	display:flex;
	flex-wrap: wrap;
}
.innovations {
	text-align: center;
	font-size: 55px;
	width: 49%;
	padding: 35px;
	box-sizing: border-box;
	justify-content: space-around;
	
}

.image2 {
	margin: 2.5% auto;
	justify-content: space-around;
	align-items: center;
}

button {
	width: 145px;
}
/*End of Header section*/
/*Begins 2nd section*/
.middle-img {
	margin: 5%;
}

}
h2 {
	text-align: left;	
}

div.features {
	width: 49%;
    display: inline-block;
    
}

div.about {
	width: 49%;
    display: inline-block;
    
 }
 div.services {
	width: 25%;
	display: inline-block;
	margin: 5% 2%;
 }

 div.product {
	width: 25%;
	display: inline-block;
	margin: 5% 2%;
 }

div.vision {
	 width: 25%;
	 display: inline-block;
	 margin: 5% 2%;
}	

.contact {
	padding:2px;
	margin: 2px;
}
body {
	margin: 0 10%;
}

